# eaglemk4_nn_controller

./: CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt  run-in-docker.sh  setup.py  tox.ini  venv.sh
config/: controller.yaml
eaglemk4_nn_controller/: controller.py  ros.py  ros_node.py
eaglemk4_nn_controller/gym/: __init__.py
eaglemk4_nn_controller/gym/envs/: __init__.py  eaglemk4_env.py
eaglemk4_nn_controller/models/: ddpg_with_vae.py
eaglemk4_nn_controller/models/vae/: controller.py  model.py
eaglemk4nn/models/autoencoder/: LICENSE  model.py  train.py  utils.py
eaglemk4nn/models/vae/: model.py  run.py  train.py
launch/: node.launch
scripts/: run.py
