<?xml version="1.0"?>
<package format="2">
  <name>eaglemk4_nn_controller</name>
  <version>0.0.1</version>
  <description>The eaglemk4_nn_controller package</description>

  <maintainer email="rsokolkov@gmail.com">Roma Sokolkov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
